# hugo-blox-builder

./: .editorconfig  .eslintignore  .eslintrc.yml  .gitignore  .ignore  .prettierignore  .prettierrc.js  .stylelintignore  .stylelintrc.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  README.zh.md  biome.json  config.toml  demo.sh  go.mod  hugo-blox-builder.code-workspace  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  theme.toml  vite.config.js
.devcontainer/: base.Dockerfile
.github/: CLA.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  contributing.md  dependabot.yml  labeler.yml  stale.yml  support.md
archetypes/: blog.md  courses.md  default.md  docs.md  home.md  post.md  project.md  publication.md  publications.md  slides.md  talk.md  work.md
data/: academic.toml  assets.toml  page_sharer.toml  social_pubshare.toml  sri.toml
docs/: README.md  config.yaml  go.mod
exampleSite/: config.toml
i18n/: ar.yaml  ca.yaml  cs.yaml  da.yaml  de.yaml  de.yaml.bak  el.yaml  en.yaml  es.yaml  et.yaml  eu.yaml  fr.yaml  hu.yaml  id.yaml  it.yaml  ja.yaml  km.yaml  ko.yaml  lt.yaml  lv.yaml  nl.yaml  pl.yaml  pt.yaml  ru.yaml  sv.yaml  tr.yaml  vi.yaml  zh.yaml
layouts/: 404.html  index.css  index.html  index.json  index.jsonindex.json  index.site.webmanifest  index.webmanifest  rss.xml  sitemap.xml
modules/: README.md
netlify-cms-academic/: README.md  config.yaml  go.mod
scripts/: copy_libraries.sh  gen_demo_resources.sh  sync_i18n.py  (+12 more)
(+2705 files in other folders)
