[tool.poetry]
name = "kit"
version = "0.1.0"
description = "Project management tool for HugoBlox Kit repository"
authors = ["George Cushen <gcushen@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pyyaml = "^6.0.1"
ruamel-yaml = "^0.18.6"
tomlkit = "^0.12.3"
plotext = "^5.2.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
